--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -3,6 +3,11 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
+debug {
+    disable_logs = false
+    enable_stdout_logs = true
+}
+
 cursor {
     no_hardware_cursors = true
 }
@@ -14,13 +19,6 @@ source = ~/.config/hypr/sheffler_input.conf
 source = ~/.config/hypr/sheffler_keybinds.conf
 source = ~/.config/hypr/sheffler_scratch.conf
 source = ~/.config/hypr/sheffler_deco.conf
-
-# NVIDIA https://wiki.hyprland.org/Nvidia/
-env = LIBVA_DRIVER_NAME,nvidia
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# env = __GL_VRR_ALLOWED,1
-# env = WLR_DRM_NO_ATOMIC,1
 
 dwindle {
     pseudotile = true
