--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -1,25 +1,28 @@
 exec-once = /home/sheffler/sw/MambaForge/bin/atuin daemon
 exec-once = firefox --new-instance -P workspace1 --name workspace1
-exec-once = firefox --new-instance -P chezmoi --name chezmoi
-exec-once = alacritty --class workspace1
-exec-once = subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
-exec-once = subl --project /home/sheffler/mlb/ide/whs/mlb.sublime-project
-# exec-once = subl --project /home/sheffler/rfdsym/ide/whs/rf_diffusion.sublime-project
+# exec-once = firefox --new-instance -P chezmoi --name chezmoi
+# exec-once = google-chrome --ozone-latform=wayland --class workspace1
+# exec-once = ghostty --class=workspace1
+exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
+# exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/mlb/ide/whs/mlb.sublime-project
+exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/rfd/ide/whs/rf_diffusion.sublime-project
 exec-once = /home/sheffler/sw/MambaForge/bin/pypr --debug /home/sheffler/pypr.log
 exec-once = /home/sheffler/sw/MambaForge/bin/pywalfox start
 exec-once = /home/sheffler/.config/hypr/scripts/xdg.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = /usr/lib/polkit-1/polkit-agent-helper-1
 exec-once = dunst
+exec-once = atuin daemon
 exec-once = /home/sheffler/.config/hypr/scripts/gtk.sh
 # exec-once = hypridle 
 # exec-once = wl-paste --watch cliphist store
 # exec-once = ags
 exec-once = hyprpaper
 exec-once = waybar
-exec-once = polychromatic-tray-applet
+# exec-once = polychromatic-tray-anpplet
 exec-once = nm-applet
 exec-once = blueman-applet
 # exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
-exec-once = hyprctl setcursor Bibata-Modern-Ice 12
+exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 exec-once = /home/sheffler/.local/bin/update_local_sys
+exec-once = clipse -listen
