--- a/private_dot_config/hypr/sheffler_input.conf
+++ b/private_dot_config/hypr/sheffler_input.conf
@@ -1,13 +1,22 @@
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 
-#$LAPTOP_KB_ENABLED = true
+# $LAPTOP_KB_ENABLED = true
 $LAPTOP_KB_ENABLED = false
+
 device {
   name = razer-razer-blade
   enabled = $LAPTOP_KB_ENABLED
 }
 device {
   name = razer-razer-blade-1
+  enabled = $LAPTOP_KB_ENABLED
+}
+device {
+  name = razer-razer-blade-keyboard
+  enabled = $LAPTOP_KB_ENABLED
+}
+device {
+  name = kanata
   enabled = $LAPTOP_KB_ENABLED
 }
 
@@ -23,7 +32,7 @@ input {
     touchpad {
         natural_scroll = false
         disable_while_typing = true
-        tap-to-click = false
+        tap-to-click = true
     }
     sensitivity = 0.4 # -1.0 - 1.0, 0 means no modification.
 }
