--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -27,7 +27,7 @@ bind = SUPER, F, exec, pypr expose
 workspace = special:exposed,gapsout:40,gapsin:20,bordersize:5,border:true,shadow:false
 
 # bind = ALT, space, exec, pypr layout_center toggle
-bind = ALT CTRL SHIFT, equal, cyclenext
+bind = ALT CTRL SHIFT, h, cyclenext
 # bind = SUPER, up, exec, pypr layout_center prev2
 # bind = SUPER, down, exec, pypr layout_center next2
 # bind = SUPER, left, exec, pypr layout_center prev
@@ -44,18 +44,6 @@ bind = SUPER CTRL, up, resizeactive, 0 -100
 bind = SUPER CTRL, down, resizeactive, 0 100
 bind = SUPER CTRL, left, resizeactive, -100 0
 bind = SUPER CTRL, right, resizeactive, 100 0
-bind = SUPER, e, movefocus, u
-bind = SUPER, i, movefocus, d
-bind = SUPER, n, movefocus, l
-bind = SUPER, o, movefocus, r
-bind = SUPER SHIFT, e, movewindow, u
-bind = SUPER SHIFT, i, movewindow, d
-bind = SUPER SHIFT, n, movewindow, l
-bind = SUPER SHIFT, o, movewindow, r
-bind = SUPER CTRL, e, resizeactive, 0 -100
-bind = SUPER CTRL, i, resizeactive, 0 100
-bind = SUPER CTRL, n, resizeactive, -100 0
-bind = SUPER CTRL, o, resizeactive, 100 0
 
 bind = SUPER , 1, workspace, 1
 bind = SUPER , 2, workspace, 2
@@ -85,7 +73,7 @@ bind = SUPER, G, togglegroup
 # bind = SUPER, M, exec, hyprctl dispatch togglebar
 bind = SUPER, M, exec, ~/.config/waybar/toggle.sh
 # bind = SUPER, N, exec, $SCRIPTS/hyprshade.sh
-bind = SUPER, RETURN, exec, alacritty
+bind = SUPER, RETURN, exec, ghostty
 bind = SUPER, SEMICOLON, pseudo,
 bind = SUPER, P, togglefloating
 bind = SUPER, V, exec, $SCRIPTS/cliphist.sh
