--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -1,32 +1,37 @@
 # q w
 # bind = ALT CTRL SHIFT, f ,exec, pypr toggle thunar
 # p g
-# bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
-# bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
-# bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
-# bind = ALT CTRL SHIFT, t ,exec, pypr toggle term4
-# bind = SUPER ALT CTRL SHIFT, a ,exec, pypr toggle term5
-# bind = SUPER ALT CTRL SHIFT, r ,exec, pypr toggle term6
-# bind = SUPER ALT CTRL SHIFT, s ,exec, pypr toggle term7
-# bind = SUPER ALT CTRL SHIFT, t ,exec, pypr toggle term8
+bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
+bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
+bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
+bind = ALT CTRL SHIFT, t ,exec, pypr toggle term4
+bind = ALT CTRL SHIFT, q ,exec, pypr toggle term5
+bind = ALT CTRL SHIFT, w ,exec, pypr toggle term6
+bind = ALT CTRL SHIFT, f ,exec, pypr toggle term7
+bind = ALT CTRL SHIFT, p ,exec, pypr toggle term8
 
 # zx
-# bind = ALT CTRL SHIFT, c ,exec, pypr toggle htop
-# bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
+bind = ALT CTRL SHIFT, c ,exec, pypr toggle clipse
+bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
 
 # jluy
-# bind = ALT CTRL SHIFT, h ,exec, pypr toggle chatgpt
-# bind = ALT CTRL SHIFT, n ,exec, pypr toggle mail
-# bind = ALT CTRL SHIFT, e ,exec, pypr toggle mattermost
-# bind = ALT CTRL SHIFT, i ,exec, pypr toggle music
-# bind = ALT CTRL SHIFT, o ,exec, pypr toggle waypaper
+bind = ALT CTRL SHIFT, h ,exec, pypr toggle chatgpt
+bind = ALT CTRL SHIFT, n ,exec, pypr toggle chrome
+bind = ALT CTRL SHIFT, e ,exec, pypr toggle mattermost
+bind = ALT CTRL SHIFT, i ,exec, pypr toggle music
+bind = ALT CTRL SHIFT, o ,exec, pypr toggle chromium
 # m
+# bind = ALT CTRL SHIFT, l ,exec, pypr toggle chrome1
+# bind = ALT CTRL SHIFT, u ,exec, pypr toggle chrome2
 # bind = ALT CTRL SHIFT, l ,exec, pypr toggle config
 # bind = ALT CTRL SHIFT, m ,exec, pypr toggle sublkeys
 
 
 # bind = ALT, W, exec, $SCRIPTS/wallpaper<p></p>-automation.sh
-windowrule=float,class:(google-chrome)
+# windowrule=float,class:(smerge)
+windowrule=float,class:(chrome1)
+windowrule=float,class:(chrome2)
+windowrule=float,class:(zed)
 windowrule=float,class:(Mattermost)
 windowrule=float,class:(Spotify)
 windowrule=float,class:(org.qutebrowser.qutebrowser)
