--- a/private_dot_config/hypr/sheffler_deco.conf
+++ b/private_dot_config/hypr/sheffler_deco.conf
@@ -14,19 +14,14 @@ decoration {
     active_opacity = 1
     inactive_opacity = 0.9
     fullscreen_opacity = 1
-
-    drop_shadow = false
-    shadow_range = 10
-    shadow_render_power = 3
-    col.shadow = 0x66000000
 }
 general {
-    gaps_in = 0
-    # gaps_out = 14,14,0,14
-    gaps_out = 0,0,0,0
+    gaps_in = 7
+    gaps_out = 14,14,0,14
+    # gaps_out = 0,0,0,0
     border_size = 2
-    # col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
-    col.active_border = rgb(888888)
+    col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
+    # col.active_border = rgb(888888)
     col.inactive_border = rgba(ffffff00)
     layout = dwindle
     resize_on_border = true
@@ -43,7 +38,7 @@ misc {
 
 
 animations {
-    enabled = false
+    enabled = true
     bezier = linear, 0, 0, 1, 1
     bezier = overshot, 0.05, 0.9, 0.1, 1.05
     bezier = smoothOut, 0.5, 0, 0.99, 0.99
@@ -56,5 +51,5 @@ animations {
     animation = fade, 1, 3, smoothIn
     animation = fadeDim, 1, 3, smoothIn
     animation = workspaces, 1, 4, default
-    # animation = borderangle, 1, 100, default, loop
+    animation = borderangle, 1, 1000, default, loop
 }
