--- a/private_dot_config/hypr/sheffler_windowrules.conf
+++ b/private_dot_config/hypr/sheffler_windowrules.conf
@@ -2,8 +2,10 @@ windowrulev2 = workspace 1, class:workspace1
 windowrulev2 = workspace 2, title:(.*)(chezmoi)(.*)
 windowrulev2 = workspace 2, class:chezmoi
 windowrulev2 = workspace 3, title:(.*)(/mlb/)(.*)
-windowrulev2 = workspace 4, title:(.*)(rfdsym)(.*)
+windowrulev2 = workspace 4, title:(.*)(/rfd/)(.*)
 windowrulev2 = workspace 5, title:(.*)(src/ppp/)(.*)
+# windowrulev2 = workspace 9, title:(.*)Sublime Merge(.*)
+# windowrulev2 = workspace 0, title:(.*)Mattermost Desktop App(.*)
 
 # windowrulev2=f-loat,title:(.*)(\(Linux\)\.sublime-keymap)(.*)
 windowrulev2=float,title:(.*)(Sign In)(.*)
@@ -13,3 +15,6 @@ windowrulev2=float,title:(.*)(PPPPP)(.*)
 windowrulev2=float,title:(Find Directory)
 windowrulev2=float,title:Dialog
 windowrulev2=float,title:Form
+windowrulev2=fullscreen,title:PyMOL
+windowrulev2=float,title:PyMOL
+# windowrulev2=stayfocused,title:PyMOL
