updates to sublime and hypr settings

--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -1,6 +1,6 @@
 $SCRIPTS = ~/.config/hypr/scripts
 
-bind = SHIFT CTRL ALT, C, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = SHIFT CTRL ALT, C, exec, grim -g "$(slurp -d)" - | tee "$HOME/Pictures/screenshot_$(date +%Y%m%d-%H%M%S).png" | wl-copy
 
 # bind = , XF86AudioPause, exec, playerctl pause
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -24,10 +24,10 @@ bind = SUPER SHIFT, J, exec, ~/.config/hypr/hypr_keybind_cmds setmulti decoratio
 bind = SUPER, H, exec, hyprctl setprop active opaque toggle
 
 bind = SUPER, F, exec, pypr expose
-workspace = special:exposed,gapsout:40,gapsin:20,bordersize:5,border:true,shadow:false
 
 # bind = ALT, space, exec, pypr layout_center toggle
-bind = ALT CTRL SHIFT, h, cyclenext
+bind = SUPER, TAB, cyclenext
+bind = SUPER, TAB, bringactivetotop,
 # bind = SUPER, up, exec, pypr layout_center prev2
 # bind = SUPER, down, exec, pypr layout_center next2
 # bind = SUPER, left, exec, pypr layout_center prev
@@ -45,6 +45,7 @@ bind = SUPER CTRL, down, resizeactive, 0 100
 bind = SUPER CTRL, left, resizeactive, -100 0
 bind = SUPER CTRL, right, resizeactive, 100 0
 
+workspace = special:exposed,gapsout:40,gapsin:20,bordersize:5,border:true,shadow:false
 bind = SUPER , 1, workspace, 1
 bind = SUPER , 2, workspace, 2
 bind = SUPER , 3, workspace, 3
