--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -10,8 +10,9 @@ bind = ALT CTRL SHIFT, w ,exec, pypr toggle term6
 bind = ALT CTRL SHIFT, f ,exec, pypr toggle term7
 bind = ALT CTRL SHIFT, p ,exec, pypr toggle term8
 
-# zx
-bind = ALT CTRL SHIFT, c ,exec, pypr toggle clipse
+bind = ALT CTRL SHIFT, d ,exec, pypr toggle warp
+# z
+bind = ALT CTRL SHIFT, x ,exec, pypr toggle clipse
 bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
 
 # jluy
@@ -24,7 +25,7 @@ bind = ALT CTRL SHIFT, o ,exec, pypr toggle chromium
 # bind = ALT CTRL SHIFT, l ,exec, pypr toggle chrome1
 # bind = ALT CTRL SHIFT, u ,exec, pypr toggle chrome2
 # bind = ALT CTRL SHIFT, l ,exec, pypr toggle config
-# bind = ALT CTRL SHIFT, m ,exec, pypr toggle sublkeys
+bind = ALT CTRL SHIFT, m ,exec, pypr toggle cursor
 
 
 # bind = ALT, W, exec, $SCRIPTS/wallpaper<p></p>-automation.sh
