--- a/private_dot_config/hypr/sheffler_windowrules.conf
+++ b/private_dot_config/hypr/sheffler_windowrules.conf
@@ -2,8 +2,11 @@ windowrulev2 = workspace 1, class:workspace1
 windowrulev2 = workspace 2, title:(.*)(chezmoi)(.*)
 windowrulev2 = workspace 2, class:chezmoi
 windowrulev2 = workspace 3, title:(.*)(/mlb/)(.*)
+windowrulev2 = workspace 3, title:(.*)(src/arctic_diamond/)(.*)
 windowrulev2 = workspace 4, title:(.*)(/rfd/)(.*)
-windowrulev2 = workspace 5, title:(.*)(src/ppp/)(.*)
+windowrulev2 = workspace 5, title:(.*)(/src/game_theory_thing_original_idea/)(.*)
+windowrulev2 = workspace 5, title:(.*)(/evn/)(.*)
+windowrulev2 = workspace 3, title:(.*)(/hgeom/)(.*)
 # windowrulev2 = workspace 9, title:(.*)Sublime Merge(.*)
 # windowrulev2 = workspace 0, title:(.*)Mattermost Desktop App(.*)
 
@@ -11,6 +14,7 @@ windowrulev2 = workspace 5, title:(.*)(src/ppp/)(.*)
 windowrulev2=float,title:(.*)(Sign In)(.*)
 windowrulev2=float,title:(.*)(Bitwarden)(.*)
 windowrulev2=float,title:(.*)(PPPPP)(.*)
+windowrulev2=float,title:(Select Files)
 # windowrulev2=float,title:(.*)(- mpv)(.*)
 windowrulev2=float,title:(Find Directory)
 windowrulev2=float,title:Dialog
