--- a/private_dot_config/hypr/pyprland.toml
+++ b/private_dot_config/hypr/pyprland.toml
@@ -16,6 +16,12 @@ plugins = [
 # margin = 50
 
 
+[scratchpads.warp]
+command = "warp-terminal"
+class = "dev.warp.Warp"
+animation = ""
+size = "90% 90%"
+position = "5% 5%"
 
 [scratchpads.term1]
 command = "alacritty --class term1"
@@ -147,6 +153,14 @@ position = "3% 5%"
 [scratchpads.chatgpt]
 command = "chat-gpt"
 class = "chat-gpt"
+animation = ""
+size = "94% 90%"
+position = "3% 5%"
+lazy = true
+
+[scratchpads.cursor]
+command = "cursor"
+class = "Cursor"
 animation = ""
 size = "94% 90%"
 position = "3% 5%"
