--- a/private_dot_config/hypr/sheffler_deco.conf
+++ b/private_dot_config/hypr/sheffler_deco.conf
@@ -1,9 +1,10 @@
 source = ~/.cache/wal/colors-hyprland.conf
 
 decoration {
-    rounding = 4
+    # rounding = 20
+    # rounding_power = 13
     blur {
-        enabled = true
+        enabled = false
         size = 2
         passes = 1
         new_optimizations = on
@@ -11,17 +12,22 @@ decoration {
         xray = false
         blurls = waybar
     }
+    # active_opacity = 0.93
+    # inactive_opacity = 0.84
+    # fullscreen_opacity = 0.95
     active_opacity = 1
-    inactive_opacity = 0.9
+    inactive_opacity = 1
     fullscreen_opacity = 1
 }
 general {
-    gaps_in = 7
-    gaps_out = 14,14,0,14
-    # gaps_out = 0,0,0,0
-    border_size = 2
-    col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
-    # col.active_border = rgb(888888)
+    # gaps_in = 4
+    # gaps_out = 8,e/8,0,8
+    # border_size = 2
+    gaps_in = 0
+    gaps_out = 0,0,0,0
+    border_size = 0
+    # col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
+    col.active_border = rgb(888888)
     col.inactive_border = rgba(ffffff00)
     layout = dwindle
     resize_on_border = true
@@ -38,7 +44,7 @@ misc {
 
 
 animations {
-    enabled = true
+    enabled = false
     bezier = linear, 0, 0, 1, 1
     bezier = overshot, 0.05, 0.9, 0.1, 1.05
     bezier = smoothOut, 0.5, 0, 0.99, 0.99
