--- a/private_dot_config/hypr/sheffler_input.conf
+++ b/private_dot_config/hypr/sheffler_input.conf
@@ -26,6 +26,8 @@ input {
     kb_options=ctrl:nocaps
     kb_model = pc10
     kb_rules =
+    # repeat_rate = 60
+    # repeat_delay = 500
     repeat_rate = 120
     repeat_delay = 300
     follow_mouse = 1
