--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -6,7 +6,7 @@ exec-once = firefox --new-instance -P workspace1 --name workspace1
 exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
 # exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/mlb/ide/whs/mlb.sublime-project
 exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/rfd/ide/whs/rf_diffusion.sublime-project
-exec-once = /home/sheffler/sw/MambaForge/bin/pypr --debug /home/sheffler/pypr.log
+exec-once = /usr/bin/pypr --debug /home/sheffler/pypr.log
 exec-once = /home/sheffler/sw/MambaForge/bin/pywalfox start
 exec-once = /home/sheffler/.config/hypr/scripts/xdg.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
