--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -40,8 +40,8 @@ bind = SUPER, page_up, movewindow, u
 bind = SUPER, page_down, movewindow, d
 bind = SUPER, home, movewindow, l
 bind = SUPER, end, movewindow, r
-bind = SUPER CTRL, up, resizeactive, 0 -100
-bind = SUPER CTRL, down, resizeactive, 0 100
+# bind = SUPER CTRL, up, resizeactive, 0 -100
+# bind = SUPER CTRL, down, resizeactive, 0 100
 bind = SUPER CTRL, left, resizeactive, -100 0
 bind = SUPER CTRL, right, resizeactive, 100 0
 
