--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -10,7 +10,12 @@ bind = ALT CTRL SHIFT, w ,exec, pypr toggle term6
 bind = ALT CTRL SHIFT, f ,exec, pypr toggle term7
 bind = ALT CTRL SHIFT, p ,exec, pypr toggle term8
 
-bind = ALT CTRL SHIFT, d ,exec, pypr toggle warp
+workspace = special:warp1, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
+workspace = special:warp2, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
+workspace = special:warp3, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
+workspace = special:warp4, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
+bind = ALT CTRL SHIFT, d , togglespecialworkspace, warp1
+bind = ALT CTRL SHIFT, g , togglespecialworkspace, warp2
 # z
 bind = ALT CTRL SHIFT, x ,exec, pypr toggle clipse
 bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
