--- a/private_dot_config/hypr/sheffler_deco.conf
+++ b/private_dot_config/hypr/sheffler_deco.conf
@@ -1,8 +1,8 @@
 source = ~/.cache/wal/colors-hyprland.conf
 
 decoration {
-    # rounding = 20
-    # rounding_power = 13
+    rounding = 10
+    # rounding_power = 12
     blur {
         enabled = false
         size = 2
@@ -25,9 +25,9 @@ general {
     # border_size = 2
     gaps_in = 0
     gaps_out = 0,0,0,0
-    border_size = 0
-    # col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
-    col.active_border = rgb(888888)
+    border_size = 1
+    col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
+    # col.active_border = rgb(888888)
     col.inactive_border = rgba(ffffff00)
     layout = dwindle
     resize_on_border = true
