--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -1,12 +1,9 @@
-exec-once = /home/sheffler/sw/MambaForge/bin/atuin daemon
-exec-once = firefox --new-instance -P workspace1 --name workspace1
+# exec-once = /home/sheffler/sw/MambaForge/bin/atuin daemon
+# exec-once = firefox --new-instance -P workspace1 --name workspace1
 # exec-once = firefox --new-instance -P chezmoi --name chezmoi
 # exec-once = google-chrome --ozone-latform=wayland --class workspace1
 # exec-once = ghostty --class=workspace1
-exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
-# exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/mlb/ide/whs/mlb.sublime-project
-exec-once = mamba run -n rfdsym312 subl --project /home/sheffler/rfd/ide/whs/rf_diffusion.sublime-project
-exec-once = /usr/bin/pypr --debug /home/sheffler/pypr.log
+# exec-once = /usr/bin/pypr --debug /home/sheffler/pypr.log
 exec-once = /home/sheffler/sw/MambaForge/bin/pywalfox start
 exec-once = /home/sheffler/.config/hypr/scripts/xdg.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -26,3 +23,8 @@ exec-once = blueman-applet
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 exec-once = /home/sheffler/.local/bin/update_local_sys
 exec-once = clipse -listen
+# exec-once = conda run -n rfdsym312 subl --project /home/sheffler/mlb/ide/whs/mlb.sublime-project
+exec-once = conda run -n rfdsym312 subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
+exec-once = conda run -n rfdsym312 subl --project /home/sheffler/rfd/ide/whs/rf_diffusion.sublime-project
+exec-once = conda run -n rfdsym312 subl --project /home/sheffler/evn/ide/evn.sublime-project
+exec-once = conda run -n rfdsym312 subl --project /home/sheffler/hgeom/ide/hgeom.sublime-project
