--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -1,6 +1,6 @@
 $SCRIPTS = ~/.config/hypr/scripts
 
-bind = SHIFT CTRL ALT, C, exec, grim -g "$(slurp -d)" - | tee "$HOME/Pictures/screenshot_$(date +%Y%m%d-%H%M%S).png" | wl-copy
+bind = SHIFT CTRL ALT, b, exec, grim -g "$(slurp -d)" - | tee "$HOME/Pictures/screenshot_$(date +%Y%m%d-%H%M%S).png" | wl-copy
 
 # bind = , XF86AudioPause, exec, playerctl pause
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -46,31 +46,31 @@ bind = SUPER CTRL, left, resizeactive, -100 0
 bind = SUPER CTRL, right, resizeactive, 100 0
 
 workspace = special:exposed,gapsout:40,gapsin:20,bordersize:5,border:true,shadow:false
-bind = SUPER , 1, workspace, 1
-bind = SUPER , 2, workspace, 2
-bind = SUPER , 3, workspace, 3
-bind = SUPER , 4, workspace, 4
-bind = SUPER , 5, workspace, 5
-bind = SUPER , 6, workspace, 6
-bind = SUPER , 7, workspace, 7
-bind = SUPER , 8, workspace, 8
-bind = SUPER , 9, workspace, 9
-bind = SUPER , 0, workspace, 10
-bind = SUPER CTRL, 1, movetoworkspace, 1
-bind = SUPER CTRL, 2, movetoworkspace, 2
-bind = SUPER CTRL, 3, movetoworkspace, 3
-bind = SUPER CTRL, 4, movetoworkspace, 4
-bind = SUPER CTRL, 5, movetoworkspace, 5
-bind = SUPER CTRL, 6, movetoworkspace, 6
-bind = SUPER CTRL, 7, movetoworkspace, 7
-bind = SUPER CTRL, 8, movetoworkspace, 8
-bind = SUPER CTRL, 9, movetoworkspace, 9
-bind = SUPER CTRL, 0, movetoworkspace, 10
+bind = SUPER , a, workspace, 1
+bind = SUPER , r, workspace, 2
+bind = SUPER , s, workspace, 3
+bind = SUPER , t, workspace, 4
+bind = SUPER , d, workspace, 5
+bind = SUPER , h, workspace, 6
+bind = SUPER , n, workspace, 7
+bind = SUPER , e, workspace, 8
+bind = SUPER , i, workspace, 9
+bind = SUPER , o, workspace, 10
+bind = SUPER CTRL, a, movetoworkspace, 1
+bind = SUPER CTRL, r, movetoworkspace, 2
+bind = SUPER CTRL, s, movetoworkspace, 3
+bind = SUPER CTRL, t, movetoworkspace, 4
+bind = SUPER CTRL, d, movetoworkspace, 5
+bind = SUPER CTRL, h, movetoworkspace, 6
+bind = SUPER CTRL, n, movetoworkspace, 7
+bind = SUPER CTRL, e, movetoworkspace, 8
+bind = SUPER CTRL, i, movetoworkspace, 9
+bind = SUPER CTRL, o, movetoworkspace, 10
 
 bind = SUPER CTRL, q, exec, wlogout
-bind = SUPER, A, exec, $SCRIPTS/toggle-animations.sh
-bind = SUPER, B, exec, firefox
-bind = SUPER, G, togglegroup
+# bind = SUPER, A, exec, $SCRIPTS/toggle-animations.sh
+# bind = SUPER, B, exec, firefox
+# bind = SUPER, G, togglegroup
 # bind = SUPER, M, exec, hyprctl dispatch togglebar
 bind = SUPER, M, exec, ~/.config/waybar/toggle.sh
 # bind = SUPER, N, exec, $SCRIPTS/hyprshade.sh
@@ -79,8 +79,8 @@ bind = SUPER, SEMICOLON, pseudo,
 bind = SUPER, P, togglefloating
 bind = SUPER, V, exec, $SCRIPTS/cliphist.sh
 bind = SUPER, Q, killactive
-bind = SUPER, R, exec, rofi -show drun
-bind = SUPER, S, togglesplit,
+bind = SUPER, f, exec, rofi -show drun
+# bind = SUPER, S, togglesplit,
 bind = SUPER, W, exec, waypaper --random
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
