--- a/private_dot_config/hypr/sheffler_windowrules.conf
+++ b/private_dot_config/hypr/sheffler_windowrules.conf
@@ -1,12 +1,14 @@
-windowrulev2 = workspace 1, class:workspace1
-windowrulev2 = workspace 2, title:(.*)(chezmoi)(.*)
-windowrulev2 = workspace 2, class:chezmoi
-windowrulev2 = workspace 3, title:(.*)(/mlb/)(.*)
-windowrulev2 = workspace 3, title:(.*)(src/arctic_diamond/)(.*)
+# windowrulev2 = workspace 1, class:workspace1
+windowrulev2 = workspace 1, title:(.*)(chezmoi)(.*)
+windowrulev2 = workspace 1, class:chezmoi
+windowrulev2 = workspace 2, title:(.*)(/evn/)(.*)
+windowrulev2 = workspace 3, title:(.*)(/ipd/)(.*)
 windowrulev2 = workspace 4, title:(.*)(/rfd/)(.*)
-windowrulev2 = workspace 5, title:(.*)(/src/game_theory_thing_original_idea/)(.*)
-windowrulev2 = workspace 5, title:(.*)(/evn/)(.*)
-windowrulev2 = workspace 3, title:(.*)(/hgeom/)(.*)
+windowrulev2 = workspace 5, title:(.*)(/hgeom/)(.*)
+
+# windowrulev2 = workspace 3, title:(.*)(/mlb/)(.*)
+# windowrulev2 = workspace 3, title:(.*)(src/arctic_diamond/)(.*)
+# windowrulev2 = workspace 5, title:(.*)(/src/game_theory_thing_original_idea/)(.*)
 # windowrulev2 = workspace 9, title:(.*)Sublime Merge(.*)
 # windowrulev2 = workspace 0, title:(.*)Mattermost Desktop App(.*)
 
