--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -1,36 +1,62 @@
 # q w
 # bind = ALT CTRL SHIFT, f ,exec, pypr toggle thunar
 # p g
-bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
-bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
-bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
-bind = ALT CTRL SHIFT, t ,exec, pypr toggle term4
-bind = ALT CTRL SHIFT, q ,exec, pypr toggle term5
-bind = ALT CTRL SHIFT, w ,exec, pypr toggle term6
-bind = ALT CTRL SHIFT, f ,exec, pypr toggle term7
-bind = ALT CTRL SHIFT, p ,exec, pypr toggle term8
+# bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
+# bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
+# bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
+# bind = ALT CTRL SHIFT, t ,exec, pypr toggle term4
+workspace = special:term1, on-created-empty:[float; size 1840 1000] alacritty, persistent:false
+workspace = special:term2, on-created-empty:[float; size 1840 1000] alacritty, persistent:false
+workspace = special:term3, on-created-empty:[float; size 1840 1000] alacritty, persistent:false
+workspace = special:term4, on-created-empty:[float; size 1840 1000] alacritty, persistent:false
+bind = ALT CTRL SHIFT, q , togglespecialworkspace, term1
+bind = ALT CTRL SHIFT, w , togglespecialworkspace, term2
+bind = ALT CTRL SHIFT, f , togglespecialworkspace, term3
+bind = ALT CTRL SHIFT, p , togglespecialworkspace, term4
+workspace = special:warp1, on-created-empty:[float; size 1840 1000] warp-terminal, persistent:false
+workspace = special:warp2, on-created-empty:[float; size 1840 1000] warp-terminal, persistent:false
+workspace = special:warp3, on-created-empty:[float; size 1840 1000] warp-terminal, persistent:false
+workspace = special:warp4, on-created-empty:[float; size 1840 1000] warp-terminal, persistent:false
+workspace = special:warp5, on-created-empty:[float; size 1840 1000] warp-terminal, persistent:false
+bind = ALT CTRL SHIFT, a , togglespecialworkspace, warp1
+bind = ALT CTRL SHIFT, r , togglespecialworkspace, warp2
+bind = ALT CTRL SHIFT, s , togglespecialworkspace, warp3
+bind = ALT CTRL SHIFT, t , togglespecialworkspace, warp4
+bind = ALT CTRL SHIFT, d , togglespecialworkspace, warp5
 
-workspace = special:warp1, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
-workspace = special:warp2, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
-workspace = special:warp3, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
-workspace = special:warp4, on-created-empty:[float; size 3000 1500] warp-terminal, persistent:false
-bind = ALT CTRL SHIFT, d , togglespecialworkspace, warp1
-bind = ALT CTRL SHIFT, g , togglespecialworkspace, warp2
+# bind = ALT CTRL SHIFT, q ,exec, pypr toggle term5
+# bind = ALT CTRL SHIFT, w ,exec, pypr toggle term6
+# bind = ALT CTRL SHIFT, f ,exec, pypr toggle term7
+# bind = ALT CTRL SHIFT, p ,exec, pypr toggle term8
+
 # z
-bind = ALT CTRL SHIFT, x ,exec, pypr toggle clipse
-bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
+workspace = special:clipse, on-created-empty:[float; size 1840 1000] alacritty -e clipse, persistent:false
+bind = ALT CTRL SHIFT, g , togglespecialworkspace, clipse
+workspace = special:btop, on-created-empty:[float; size 1840 1000] alacritty -e btop, persistent:false
+bind = ALT CTRL SHIFT, k , togglespecialworkspace, btop
 
 # jluy
-bind = ALT CTRL SHIFT, h ,exec, pypr toggle chatgpt
-bind = ALT CTRL SHIFT, n ,exec, pypr toggle chrome
-bind = ALT CTRL SHIFT, e ,exec, pypr toggle mattermost
-bind = ALT CTRL SHIFT, i ,exec, pypr toggle music
-bind = ALT CTRL SHIFT, o ,exec, pypr toggle chromium
+workspace = special:mattermost, on-created-empty:[float; size 1840 1000] mattermost-desktop, persistent:false
+bind = ALT CTRL SHIFT, h , togglespecialworkspace, mattermost
+
+workspace = special:brave1, on-created-empty:[float; size 1840 1000] brave --profile-directory="Profile 1", persistent:false
+workspace = special:brave2, on-created-empty:[float; size 1840 1000] brave --profile-directory="Profile 2", persistent:false
+workspace = special:brave3, on-created-empty:[float; size 1840 1000] brave --profile-directory="Profile 3", persistent:false
+workspace = special:brave4, on-created-empty:[float; size 1840 1000] brave --profile-directory="Profile 4", persistent:false
+bind = ALT CTRL SHIFT, n , togglespecialworkspace, brave1
+bind = ALT CTRL SHIFT, e , togglespecialworkspace, brave2
+bind = ALT CTRL SHIFT, i , togglespecialworkspace, brave3
+bind = ALT CTRL SHIFT, o , togglespecialworkspace, brave4
+
+# workspace = special:conf, on-created-empty:[float; size 1840 1000] subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project, persistent:false
+workspace = special:conf, on-created-empty:[float; size 1840 1000] /opt/sublime_text/sublime_text, persistent:false
+bind = ALT CTRL SHIFT, l , togglespecialworkspace, conf
+
 # m
 # bind = ALT CTRL SHIFT, l ,exec, pypr toggle chrome1
 # bind = ALT CTRL SHIFT, u ,exec, pypr toggle chrome2
 # bind = ALT CTRL SHIFT, l ,exec, pypr toggle config
-bind = ALT CTRL SHIFT, m ,exec, pypr toggle cursor
+# bind = ALT CTRL SHIFT, m ,exec, pypr toggle cursor
 
 
 # bind = ALT, W, exec, $SCRIPTS/wallpaper<p></p>-automation.sh
